addGetFilmById_v1.6